tests/data/fortran/errors/parser/err_duplicate_procedure_global.f90
subroutine work(n)
  integer, intent(in) :: n
end subroutine work

subroutine work(n)
  integer, intent(in) :: n
end subroutine work
